--- a/01jupyter/notebooks/source/cs02/cs02_omp_gpu.sos.ipynb
+++ b/01jupyter/notebooks/source/cs02/cs02_omp_gpu.sos.ipynb
@@ -291,7 +291,7 @@
         "## 2-3. Summary of compiler options to compile OpenMP programs for GPU",
         "\n",
         "* `clang`/`clang++` : `-fopenmp -fopenmp-targets=nvptx64` options\n",
-        "* `nvc`/`nvc++` : `-mp -target-gpu` option"
+        "* `nvc`/`nvc++` : `-mp=gpu` option"
       ]
     },
     {
@@ -358,7 +358,7 @@
         }
       },
       "source": [
-        "%%writefile omp_target.cc\n",
+        "%%writefile omp_target.c\n",
         "#include <stdio.h>\n",
         "int main() {\n",
         "  printf(\"hello on host\\n\");\n",
@@ -402,8 +402,8 @@
         }
       },
       "source": [
-        "clang++ -fopenmp -fopenmp-targets=nvptx64 omp_target.cc -o omp_target\n",
-        "# nvc++ -mp -target=gpu omp_target.cc -o omp_target"
+        "# clang -fopenmp -fopenmp-targets=nvptx64 omp_target.c -o omp_target\n",
+        "nvc -mp=gpu omp_target.c -o omp_target"
       ],
       "execution_count": null,
       "outputs": []
@@ -440,8 +440,8 @@
         }
       },
       "source": [
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_target.cc -o omp_target\n",
-        "# nvc++ -mp -target=gpu omp_target.cc -o omp_target"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_target.c -o omp_target\n",
+        "nvc -mp=gpu omp_target.c -o omp_target"
       ],
       "execution_count": null,
       "outputs": []
@@ -568,7 +568,7 @@
         }
       },
       "source": [
-        "%%writefile omp_teams.cc\n",
+        "%%writefile omp_teams.c\n",
         "#include <stdio.h>\n",
         "int main() {\n",
         "  printf(\"hello on host\\n\");\n",
@@ -596,8 +596,8 @@
         }
       },
       "source": [
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_teams.cc -o omp_teams\n",
-        "# nvc++ -mp -target=gpu omp_teams.cc -o omp_teams"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_teams.c -o omp_teams\n",
+        "nvc -mp=gpu omp_teams.c -o omp_teams"
       ],
       "execution_count": null,
       "outputs": []
@@ -733,7 +733,7 @@
         }
       },
       "source": [
-        "%%writefile omp_team_num.cc\n",
+        "%%writefile omp_team_num.c\n",
         "#include <stdio.h>\n",
         "#include <omp.h>\n",
         "int main() {\n",
@@ -762,8 +762,8 @@
         }
       },
       "source": [
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_team_num.cc -o omp_team_num\n",
-        "# nvc++ -mp -target=gpu omp_team_num.cc -o omp_team_num"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_team_num.c -o omp_team_num\n",
+        "nvc -mp=gpu omp_team_num.c -o omp_team_num"
       ],
       "execution_count": null,
       "outputs": []
@@ -850,7 +850,7 @@
         }
       },
       "source": [
-        "%%writefile omp_distribute.cc\n",
+        "%%writefile omp_distribute.c\n",
         "#include <stdio.h>\n",
         "#include <stdlib.h>\n",
         "#include <omp.h>\n",
@@ -889,8 +889,8 @@
         }
       },
       "source": [
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_distribute.cc -o omp_distribute\n",
-        "# nvc++ -mp -target=gpu omp_distribute.cc -o omp_distribute"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_distribute.c -o omp_distribute\n",
+        "nvc -mp=gpu omp_distribute.c -o omp_distribute"
       ],
       "execution_count": null,
       "outputs": []
@@ -1048,7 +1048,7 @@
         }
       },
       "source": [
-        "%%writefile omp_target_teams_distribute.cc\n",
+        "%%writefile omp_target_teams_distribute.c\n",
         "#include <stdio.h>\n",
         "#include <omp.h>\n",
         "int main(int argc, char ** argv) {\n",
@@ -1081,8 +1081,8 @@
         }
       },
       "source": [
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_target_teams_distribute.cc -o omp_target_teams_distribute\n",
-        "# nvc++ -mp -target=gpu omp_target_teams_distribute.cc -o omp_target_teams_distribute"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_target_teams_distribute.c -o omp_target_teams_distribute\n",
+        "nvc -mp=gpu omp_target_teams_distribute.c -o omp_target_teams_distribute"
       ],
       "execution_count": null,
       "outputs": []
@@ -1178,7 +1178,7 @@
         }
       },
       "source": [
-        "%%writefile omp_parallel.cc\n",
+        "%%writefile omp_parallel.c\n",
         "#include <stdio.h>\n",
         "#include <stdlib.h>\n",
         "#include <omp.h>\n",
@@ -1218,8 +1218,8 @@
         }
       },
       "source": [
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_parallel.cc -o omp_parallel\n",
-        "# nvc++ -mp -target=gpu omp_parallel.cc -o omp_parallel"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_parallel.c -o omp_parallel\n",
+        "nvc -mp=gpu omp_parallel.c -o omp_parallel"
       ],
       "execution_count": null,
       "outputs": []
@@ -1368,7 +1368,7 @@
         }
       },
       "source": [
-        "%%writefile omp_distribute_parallel.cc\n",
+        "%%writefile omp_distribute_parallel.c\n",
         "#include <stdio.h>\n",
         "#include <omp.h>\n",
         "int main(int argc, char ** argv) {\n",
@@ -1414,8 +1414,8 @@
         }
       },
       "source": [
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_distribute_parallel.cc -o omp_distribute_parallel\n",
-        "# nvc++ -mp -target=gpu omp_distribute_parallel.cc -o omp_distribute_parallel"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_distribute_parallel.c -o omp_distribute_parallel\n",
+        "nvc -mp=gpu omp_distribute_parallel.c -o omp_distribute_parallel"
       ],
       "execution_count": null,
       "outputs": []
@@ -1551,7 +1551,7 @@
         }
       },
       "source": [
-        "%%writefile omp_for.cc\n",
+        "%%writefile omp_for.c\n",
         "#include <stdio.h>\n",
         "#include <omp.h>\n",
         "int main(int argc, char ** argv) {\n",
@@ -1604,8 +1604,8 @@
         }
       },
       "source": [
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_for.cc -o omp_for\n",
-        "# nvc++ -mp -target=gpu omp_for.cc -o omp_for"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_for.c -o omp_for\n",
+        "nvc -mp=gpu omp_for.c -o omp_for"
       ],
       "execution_count": null,
       "outputs": []
@@ -1826,7 +1826,7 @@
         }
       },
       "source": [
-        "%%writefile omp_map_local.cc\n",
+        "%%writefile omp_map_local.c\n",
         "#com 2\n",
         "#include <stdio.h>\n",
         "#include <omp.h>\n",
@@ -1875,8 +1875,8 @@
         }
       },
       "source": [
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_local.cc -o omp_map_local\n",
-        "# nvc++ -mp -target=gpu omp_map_local.cc -o omp_map_local"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_local.c -o omp_map_local\n",
+        "nvc -mp=gpu omp_map_local.c -o omp_map_local"
       ],
       "execution_count": null,
       "outputs": []
@@ -1939,7 +1939,7 @@
         }
       },
       "source": [
-        "%%writefile omp_map_from.cc\n",
+        "%%writefile omp_map_from.c\n",
         "#include <stdio.h>\n",
         "#include <omp.h>\n",
         "struct point { float x; float y; };\n",
@@ -1977,8 +1977,8 @@
         }
       },
       "source": [
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_from.cc -o omp_map_from\n",
-        "# nvc++ -mp -target=gpu omp_map_from.cc -o omp_map_from"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_from.c -o omp_map_from\n",
+        "nvc -mp=gpu omp_map_from.c -o omp_map_from"
       ],
       "execution_count": null,
       "outputs": []
@@ -2039,7 +2039,7 @@
       "source": [
         "BEGIN SOLUTION\n",
         "END SOLUTION\n",
-        "%%writefile omp_map_from.cc\n",
+        "%%writefile omp_map_from.c\n",
         "#include <stdio.h>\n",
         "#include <omp.h>\n",
         "struct point { float x; float y; };\n",
@@ -2080,8 +2080,8 @@
       "source": [
         "BEGIN SOLUTION\n",
         "END SOLUTION\n",
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_from.cc -o omp_map_from\n",
-        "# nvc++ -mp -target=gpu omp_map_from.cc -o omp_map_from"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_from.c -o omp_map_from\n",
+        "nvc -mp=gpu omp_map_from.c -o omp_map_from"
       ],
       "execution_count": null,
       "outputs": []
@@ -2142,7 +2142,7 @@
         }
       },
       "source": [
-        "%%writefile omp_map_global.cc\n",
+        "%%writefile omp_map_global.c\n",
         "#include <stdio.h>\n",
         "#include <omp.h>\n",
         "struct point { float x; float y; };\n",
@@ -2191,8 +2191,8 @@
         }
       },
       "source": [
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_global.cc -o omp_map_global\n",
-        "# nvc++ -mp -target=gpu omp_map_global.cc -o omp_map_global"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_global.c -o omp_map_global\n",
+        "nvc -mp=gpu omp_map_global.c -o omp_map_global"
       ],
       "execution_count": null,
       "outputs": []
@@ -2250,7 +2250,7 @@
         }
       },
       "source": [
-        "%%writefile omp_map_ptr.cc\n",
+        "%%writefile omp_map_ptr.c\n",
         "#com 3\n",
         "#include <stdio.h>\n",
         "#include <omp.h>\n",
@@ -2295,8 +2295,8 @@
         }
       },
       "source": [
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_ptr.cc -o omp_map_ptr\n",
-        "# nvc++ -mp -target=gpu omp_map_ptr.cc -o omp_map_ptr"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_ptr.c -o omp_map_ptr\n",
+        "nvc -mp=gpu omp_map_ptr.c -o omp_map_ptr"
       ],
       "execution_count": null,
       "outputs": []
@@ -2353,7 +2353,7 @@
         }
       },
       "source": [
-        "%%writefile omp_map_ptr_with_addr.cc\n",
+        "%%writefile omp_map_ptr_with_addr.c\n",
         "#com 3\n",
         "#include <stdio.h>\n",
         "#include <omp.h>\n",
@@ -2398,8 +2398,8 @@
         }
       },
       "source": [
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_ptr_with_addr.cc -o omp_map_ptr_with_addr\n",
-        "# nvc++ -mp -target=gpu omp_map_ptr_with_addr.cc -o omp_map_ptr_with_addr"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_ptr_with_addr.c -o omp_map_ptr_with_addr\n",
+        "nvc -mp=gpu omp_map_ptr_with_addr.c -o omp_map_ptr_with_addr"
       ],
       "execution_count": null,
       "outputs": []
@@ -2455,7 +2455,7 @@
         }
       },
       "source": [
-        "%%writefile omp_map_ptr_err.cc\n",
+        "%%writefile omp_map_ptr_err.c\n",
         "#com 3\n",
         "#include <stdio.h>\n",
         "#include <omp.h>\n",
@@ -2500,8 +2500,8 @@
         }
       },
       "source": [
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_ptr_err.cc -o omp_map_ptr_err\n",
-        "# nvc++ -mp -target=gpu omp_map_ptr_err.cc -o omp_map_ptr_err"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_ptr_err.c -o omp_map_ptr_err\n",
+        "nvc -mp=gpu omp_map_ptr_err.c -o omp_map_ptr_err"
       ],
       "execution_count": null,
       "outputs": []
@@ -2562,7 +2562,7 @@
         }
       },
       "source": [
-        "%%writefile omp_map_heap.cc\n",
+        "%%writefile omp_map_heap.c\n",
         "#com 2\n",
         "#include <stdio.h>\n",
         "#include <omp.h>\n",
@@ -2600,8 +2600,8 @@
         }
       },
       "source": [
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_heap.cc -o omp_map_heap\n",
-        "# nvc++ -mp -target=gpu omp_map_heap.cc -o omp_map_heap"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_heap.c -o omp_map_heap\n",
+        "nvc -mp=gpu omp_map_heap.c -o omp_map_heap"
       ],
       "execution_count": null,
       "outputs": []
@@ -2661,7 +2661,7 @@
       "source": [
         "BEGIN SOLUTION\n",
         "END SOLUTION\n",
-        "%%writefile omp_map_heap.cc\n",
+        "%%writefile omp_map_heap.c\n",
         "#com 2\n",
         "#include <stdio.h>\n",
         "#include <omp.h>\n",
@@ -2702,8 +2702,8 @@
       "source": [
         "BEGIN SOLUTION\n",
         "END SOLUTION\n",
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_heap.cc -o omp_map_heap\n",
-        "# nvc++ -mp -target=gpu omp_map_heap.cc -o omp_map_heap"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_heap.c -o omp_map_heap\n",
+        "nvc -mp=gpu omp_map_heap.c -o omp_map_heap"
       ],
       "execution_count": null,
       "outputs": []
@@ -2766,7 +2766,7 @@
         }
       },
       "source": [
-        "%%writefile omp_map_ptr_in_data.cc\n",
+        "%%writefile omp_map_ptr_in_data.c\n",
         "#include <stdio.h>\n",
         "#include <omp.h>\n",
         "struct cell { float x; float * a; };\n",
@@ -2821,8 +2821,8 @@
         }
       },
       "source": [
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_ptr_in_data.cc -o omp_map_ptr_in_data\n",
-        "# nvc++ -mp -target=gpu omp_map_ptr_in_data.cc -o omp_map_ptr_in_data"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_ptr_in_data.c -o omp_map_ptr_in_data\n",
+        "nvc -mp=gpu omp_map_ptr_in_data.c -o omp_map_ptr_in_data"
       ],
       "execution_count": null,
       "outputs": []
@@ -2884,7 +2884,7 @@
       "source": [
         "BEGIN SOLUTION\n",
         "END SOLUTION\n",
-        "%%writefile omp_map_ptr_in_data.cc\n",
+        "%%writefile omp_map_ptr_in_data.c\n",
         "#include <stdio.h>\n",
         "#include <omp.h>\n",
         "struct cell { float x; float * a; };\n",
@@ -2942,8 +2942,8 @@
       "source": [
         "BEGIN SOLUTION\n",
         "END SOLUTION\n",
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_ptr_in_data.cc -o omp_map_ptr_in_data\n",
-        "# nvc++ -mp -target=gpu omp_map_ptr_in_data.cc -o omp_map_ptr_in_data"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_map_ptr_in_data.c -o omp_map_ptr_in_data\n",
+        "nvc -mp=gpu omp_map_ptr_in_data.c -o omp_map_ptr_in_data"
       ],
       "execution_count": null,
       "outputs": []
@@ -3015,7 +3015,7 @@
       "source": [
         "BEGIN SOLUTION\n",
         "END SOLUTION\n",
-        "%%writefile omp_gpu_sum.cc\n",
+        "%%writefile omp_gpu_sum.c\n",
         "#com 2\n",
         "#include <stdio.h>\n",
         "#include <unistd.h>\n",
@@ -3094,8 +3094,8 @@
       "source": [
         "BEGIN SOLUTION\n",
         "END SOLUTION\n",
-        "clang++ -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_gpu_sum.cc -o omp_gpu_sum\n",
-        "# nvc++ -mp -target=gpu omp_gpu_sum.cc -o omp_gpu_sum"
+        "# clang -Wall -Wno-unknown-cuda-version -fopenmp -fopenmp-targets=nvptx64 omp_gpu_sum.c -o omp_gpu_sum\n",
+        "nvc -mp=gpu omp_gpu_sum.c -o omp_gpu_sum"
       ],
       "execution_count": null,
       "outputs": []
