--- a/01jupyter/notebooks/source/cs01/cs01_omp_multicore.sos.ipynb
+++ b/01jupyter/notebooks/source/cs01/cs01_omp_multicore.sos.ipynb
@@ -1406,7 +1406,7 @@
         "        x, y = fields[:2]\n",
         "        X.append(float(x))\n",
         "        Y.append(float(y))\n",
-        "        L.append(Y[0] * float(x))\n",
+        "        L.append(Y[0] / X[0] * float(x))\n",
         "    plt.ylabel(\"GFLOPS\")\n",
         "    plt.xlabel(\"num_threads\")\n",
         "    plt.plot(X, L)\n",
