--- a/01jupyter/notebooks/source/cs05/cs05_omp_integral_simd_ilp_mp.sos.ipynb
+++ b/01jupyter/notebooks/source/cs05/cs05_omp_integral_simd_ilp_mp.sos.ipynb
@@ -123,7 +123,7 @@
         "    fprintf(stderr, \"check your program\\n\");\n",
         "  }\n",
         "  printf(\"volume        : %.9f\\n\", v);\n",
-        "  printf(\"error         : %e\\n\", );\n",
+        "  printf(\"error         : %e\\n\", error);\n",
         "  printf(\"elapsed       : %7.3f\\n\", dt);\n",
         "  printf(\"n^3 / nsec    : %7.3f\\n\",\n",
         "         (double)n * (double)n * (double)n / dt * 1.0e-9);\n",
