--- a/01jupyter/notebooks/source/cs04/cs04_simd.sos.ipynb
+++ b/01jupyter/notebooks/source/cs04/cs04_simd.sos.ipynb
@@ -2168,110 +2168,43 @@
         }
       },
       "source": [
-        "import re\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "DATA = r\"\"\"\n",
-        "=====\n",
-        "n             : 512\n",
-        "nteams        : 1\n",
-        "nthreads      : 1\n",
-        "volume        : 0.523606822\n",
-        "error         : 8.046296e-06\n",
-        "elapsed       :   0.047\n",
-        "n^3 / nsec    :   2.885\n",
-        "=====\n",
-        "n             : 512\n",
-        "nteams        : 1\n",
-        "nthreads      : 2\n",
-        "volume        : 0.523606822\n",
-        "error         : 8.046296e-06\n",
-        "elapsed       :   0.047\n",
-        "n^3 / nsec    :   2.876\n",
-        "=====\n",
-        "n             : 512\n",
-        "nteams        : 1\n",
-        "nthreads      : 4\n",
-        "volume        : 0.523606822\n",
-        "error         : 8.046296e-06\n",
-        "elapsed       :   0.047\n",
-        "n^3 / nsec    :   2.882\n",
-        "=====\n",
-        "n             : 512\n",
-        "nteams        : 1\n",
-        "nthreads      : 6\n",
-        "volume        : 0.523606822\n",
-        "error         : 8.046296e-06\n",
-        "elapsed       :   0.047\n",
-        "n^3 / nsec    :   2.871\n",
-        "=====\n",
-        "n             : 512\n",
-        "nteams        : 1\n",
-        "nthreads      : 8\n",
-        "volume        : 0.523606822\n",
-        "error         : 8.046296e-06\n",
-        "elapsed       :   0.047\n",
-        "n^3 / nsec    :   2.882\n",
-        "=====\n",
-        "n             : 512\n",
-        "nteams        : 1\n",
-        "nthreads      : 9\n",
-        "volume        : 0.523606822\n",
-        "error         : 8.046296e-06\n",
-        "elapsed       :   0.047\n",
-        "n^3 / nsec    :   2.877\n",
-        "=====\n",
-        "n             : 512\n",
-        "nteams        : 1\n",
-        "nthreads      : 12\n",
-        "volume        : 0.523606822\n",
-        "error         : 8.046296e-06\n",
-        "elapsed       :   0.047\n",
-        "n^3 / nsec    :   2.883\n",
-        "=====\n",
-        "n             : 512\n",
-        "nteams        : 1\n",
-        "nthreads      : 18\n",
-        "volume        : 0.523606822\n",
-        "error         : 8.046296e-06\n",
-        "elapsed       :   0.046\n",
-        "n^3 / nsec    :   2.888\n",
+        "1 xxxx GFLOPS\n",
+        "2 xxxx GFLOPS\n",
+        "3 xxxx GFLOPS\n",
+        "4 xxxx GFLOPS\n",
+        "6 xxxx GFLOPS\n",
+        "8 xxxx GFLOPS\n",
+        "12 xxxx GFLOPS\n",
+        "16 xxxx GFLOPS\n",
+        "20 xxxx GFLOPS\n",
+        "24 xxxx GFLOPS\n",
+        "28 xxxx GFLOPS\n",
+        "32 xxxx GFLOPS\n",
         "\"\"\"\n",
         "\n",
-        "def put_rec(R, D):\n",
-        "    num_teams = int(D[\"nteams\"])\n",
-        "    num_threads = int(D[\"nthreads\"])\n",
-        "    perf = float(D[\"n^3 / nsec\"])\n",
-        "    R.append((num_teams * num_threads, perf))\n",
-        "\n",
-        "def speedup(data):\n",
-        "    data = data.strip().split(\"\\n\")\n",
-        "    R = []                      # (nteams * nthreads, n^3/nsec)\n",
-        "    D = None\n",
-        "    pat = re.compile(r\"(?P<k>[^:]+?) *: +(?P<v>\\d+(\\.\\d+)?)\")\n",
+        "def main():\n",
+        "    data = DATA.strip().split(\"\\n\")\n",
+        "    X = []\n",
+        "    Y = []\n",
+        "    L = []\n",
         "    for line in data:\n",
-        "        if line.strip() == \"=====\":\n",
-        "            if D is not None:\n",
-        "                put_rec(R, D)\n",
-        "            D = {}\n",
-        "        else:\n",
-        "            m = pat.match(line)\n",
-        "            key = m.group(\"k\")\n",
-        "            val = m.group(\"v\")\n",
-        "            D[key] = val\n",
-        "    if D is not None:\n",
-        "        put_rec(R, D)\n",
-        "    plt.ylabel(\"n^3/nsec\")\n",
-        "    plt.xlabel(\"num_teams * num_threads\")\n",
-        "    R.sort()\n",
-        "    X = [x    for x, perf in R]\n",
-        "    Y = [perf for x, perf in R]\n",
-        "    L = [Y[0]/X[0] * x for x in X]\n",
-        "    plt.plot(X, Y)\n",
+        "        fields = line.strip().split()\n",
+        "        if len(fields) != 3:\n",
+        "            continue\n",
+        "        x, y = fields[:2]\n",
+        "        X.append(float(x))\n",
+        "        Y.append(float(y))\n",
+        "        L.append(Y[0] / X[0] * float(x))\n",
+        "    plt.ylabel(\"GFLOPS\")\n",
+        "    plt.xlabel(\"num_threads\")\n",
         "    plt.plot(X, L)\n",
+        "    plt.plot(X, Y)\n",
         "    plt.show()\n",
         "\n",
-        "speedup(DATA)"
+        "main()"
       ],
       "execution_count": null,
       "outputs": []
