--- a/01jupyter/notebooks/source/cs04/cs04_simd.sos.ipynb
+++ b/01jupyter/notebooks/source/cs04/cs04_simd.sos.ipynb
@@ -2090,7 +2090,7 @@
         }
       },
       "source": [
-        "OMP_NUM_THREADS=1 ./omp_speedup_simd_ilp_mp.exe 64 $((100 * 1000 * 1000))"
+        "OMP_PROC_BIND=true OMP_NUM_THREADS=1 ./omp_speedup_simd_ilp_mp.exe 64 $((100 * 1000 * 1000))"
       ],
       "execution_count": null,
       "outputs": []
@@ -2131,7 +2131,7 @@
         "END SOLUTION\n",
         "for th in 1 2 3 適切なスレッド数 ; do\n",
         "    echo -n \"$th \"\n",
-        "    OMP_NUM_THREADS=${th} ./omp_speedup_simd_ilp_mp.exe $((64 * ${th})) $((100 * 1000 * 1000)) | grep GFLOPS\n",
+        "    OMP_PROC_BIND=true OMP_NUM_THREADS=${th} ./omp_speedup_simd_ilp_mp.exe $((64 * ${th})) $((100 * 1000 * 1000)) | grep GFLOPS\n",
         "done"
       ],
       "execution_count": null,
