--- a/01jupyter/notebooks/source/cs05/cs05_omp_integral_simd_ilp_mp.sos.ipynb
+++ b/01jupyter/notebooks/source/cs05/cs05_omp_integral_simd_ilp_mp.sos.ipynb
@@ -169,6 +169,25 @@
         }
       },
       "source": [
+        "export PATH=/opt/nvidia/hpc_sdk/Linux_x86_64/24.5/compilers/bin:$PATH"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "kernel": "Bash",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-006",
+          "locked": false,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
         "nvc -fast -mp=multicore omp_ball_simd_ilp_mp.c -o omp_ball_simd_ilp_mp.exe"
       ],
       "execution_count": null,
@@ -180,7 +199,7 @@
         "kernel": "SoS",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-006",
+          "grade_id": "c-007",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -201,7 +220,7 @@
         "kernel": "Bash",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-007",
+          "grade_id": "c-008",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -209,7 +228,7 @@
         }
       },
       "source": [
-        "OMP_NUM_THREADS=1 ./omp_ball_mp.exe 512"
+        "OMP_PROC_BIND=true OMP_NUM_THREADS=1 omp_ball_simd_ilp_mp.exe 512"
       ],
       "execution_count": null,
       "outputs": []
@@ -220,7 +239,7 @@
         "kernel": "SoS",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-008",
+          "grade_id": "c-009",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -262,7 +281,7 @@
         "kernel": "SoS",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-009",
+          "grade_id": "c-010",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -280,7 +299,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-010",
+          "grade_id": "c-011",
           "locked": false,
           "schema_version": 3,
           "solution": false,
