--- a/01jupyter/notebooks/source/cs05/cs05_omp_integral_simd_ilp_mp.sos.ipynb
+++ b/01jupyter/notebooks/source/cs05/cs05_omp_integral_simd_ilp_mp.sos.ipynb
@@ -188,7 +188,7 @@
         }
       },
       "source": [
-        "nvc -fast -mp=multicore omp_ball_simd_ilp_mp.c -o omp_ball_simd_ilp_mp.exe"
+        "nvc -fast -mp=multicore -Minfo -Mneginfo omp_ball_simd_ilp_mp.c -o omp_ball_simd_ilp_mp.exe"
       ],
       "execution_count": null,
       "outputs": []
@@ -228,7 +228,7 @@
         }
       },
       "source": [
-        "OMP_PROC_BIND=true OMP_NUM_THREADS=1 omp_ball_simd_ilp_mp.exe 512"
+        "OMP_PROC_BIND=true OMP_NUM_THREADS=1 ./omp_ball_simd_ilp_mp.exe 512"
       ],
       "execution_count": null,
       "outputs": []
@@ -269,7 +269,7 @@
         "END SOLUTION\n",
         "for th in 1 2 適切にスレッド数を並べよ ; do\n",
         "  echo \"=====\"\n",
-        "  OMP_PROC_BIND=true OMP_NUM_THREADS=${th} ./omp_ball_mp.exe 512\n",
+        "  OMP_PROC_BIND=true OMP_NUM_THREADS=${th} ./omp_ball_simd_ilp_mp.exe 512\n",
         "done"
       ],
       "execution_count": null,
