--- a/01jupyter/notebooks/source/cs02/cs02_omp_gpu.sos.ipynb
+++ b/01jupyter/notebooks/source/cs02/cs02_omp_gpu.sos.ipynb
@@ -392,9 +392,9 @@
         "#pragma omp teams\n",
         "    S\n",
         "```\n",
-        "複数のチームを作成し、各チームの*マスター*が $S$ を実行する\n",
+        "複数のチームを作成し, 各チームの*マスター*が $S$ を実行する\n",
         "\n",
-        "* `#pragma omp parallel` に似ており、多くのスレッドが同じ文を実行する効果を持つ\n",
+        "* `#pragma omp parallel` に似ており, 多くのスレッドが同じ文を実行する効果を持つ\n",
         "* `teams` は `parallel` の外側にある追加の並列化レイヤーと考えればよい\n",
         "  * `teams` はチームを多数作る\n",
         "  * `parallel` は各チーム内でスレッドを多数作る\n",
@@ -485,7 +485,7 @@
         "\n",
         "* 注:\n",
         "  * `teams` は `target` のすぐ内側に現れる必要がある\n",
-        "  * そのため実際、`target` と `teams` はしばしば一行で使用される (`#pragma omp target teams`)\n",
+        "  * そのため実際, `target` と `teams` はしばしば一行で使用される (`#pragma omp target teams`)\n",
         "  * つまり次の形が普通\n",
         ""
       ]
@@ -571,7 +571,7 @@
       "source": [
         "## 5-2. チームの数を指定する",
         "\n",
-        "* `teams` 構文で作成されるチームの数を $x$ に設定するには、以下のいずれかの方法がある\n",
+        "* `teams` 構文で作成されるチームの数を $x$ に設定するには, 以下のいずれかの方法がある\n",
         "  * `teams` 構文に `num_teams(x)` を追加 (`parallel` 構文の `num_threads` と類似)\n",
         "  * コマンド実行時に `OMP_NUM_TEAMS=x` 環境変数を設定 (`OMP_NUM_THREADS` と類似)"
       ]
@@ -629,7 +629,7 @@
         "\n",
         "## 5-3. チームIDとチーム数の取得",
         "\n",
-        "* `omp_get_thread_num()` と `omp_get_num_threads()` がスレッドIDとスレッド数を取得するのと同様に、チームIDとチーム数を取得できる\n",
+        "* `omp_get_thread_num()` と `omp_get_num_threads()` がスレッドIDとスレッド数を取得するのと同様に, チームIDとチーム数を取得できる\n",
         "  * `omp_get_team_num()`\n",
         "  * `omp_get_num_teams()` "
       ]
@@ -893,7 +893,7 @@
       },
       "source": [
         "\n",
-        "* 異なるチーム数とコマンドラインの繰り返し回数で次のコマンドを実行し、その結果を理解せよ"
+        "* 異なるチーム数とコマンドラインの繰り返し回数で次のコマンドを実行し, その結果を理解せよ"
       ]
     },
     {
@@ -933,7 +933,7 @@
         "# <font color=\"green\"> Problem 1 :  teams と distribute を理解する</font>",
         "\n",
         "* 後々混乱しないように簡単なクイズ\n",
-        "* 上記のプログラムを <font color=\"blue\"><tt>OMP_NUM_TEAMS=$T$ ./omp_distribute_gpu.exe $m$</tt></font> で実行したときに、どの行が何スレッドによって実行されるか(何が何回表示されるか)を推測し、その結果、何行が出力されるかを, \n",
+        "* 上記のプログラムを <font color=\"blue\"><tt>OMP_NUM_TEAMS=$T$ ./omp_distribute_gpu.exe $m$</tt></font> で実行したときに, どの行が何スレッドによって実行されるか(何が何回表示されるか)を推測し, その結果, 何行が出力されるかを, \n",
         "* $T$ と $m$ の式で答えよ"
       ]
     },
@@ -970,7 +970,7 @@
         }
       },
       "source": [
-        "* 答えを確認するために、以下のように `wc` コマンドを使用して行数を数えればよい(左端の数字が行数)\n",
+        "* 答えを確認するために, 以下のように `wc` コマンドを使用して行数を数えればよい(左端の数字が行数)\n",
         "\n",
         "* 次のコマンドを異なるチーム数とコマンドラインの繰り返し回数で実行せよ"
       ]
@@ -1010,7 +1010,7 @@
       "source": [
         "\n",
         "* 注:\n",
-        "  * `teams` と `distribute` の間に何も文がなければ、1つの指示 (`#pragma omp teams distribute`)で書ける (`parallel` と `for` でできたのと同じ)\n",
+        "  * `teams` と `distribute` の間に何も文がなければ, 1つの指示 (`#pragma omp teams distribute`)で書ける (`parallel` と `for` でできたのと同じ)\n",
         "  * `target` と `teams` を結合できた, ということで, 3つを1つの指示に結合できる"
       ]
     },
@@ -1139,9 +1139,9 @@
         "```\n",
         "各チーム内でスレッドを作成する\n",
         "\n",
-        "* `teams` 内で使用すると、**各チーム**内でスレッドを作成し、それぞれが $S$ を実行する\n",
+        "* `teams` 内で使用すると, **各チーム**内でスレッドを作成し, それぞれが $S$ を実行する\n",
         "\n",
-        "* 例として、<font color=\"blue\"><tt>OMP_NUM_TEAMS=$T$ OMP_NUM_THREADS=$H$ ./omp_team_parallel_gpu.exe</tt></font> は $T$ チームを作成し、それぞれが $H$ スレッドを作成する"
+        "* 例として, <font color=\"blue\"><tt>OMP_NUM_TEAMS=$T$ OMP_NUM_THREADS=$H$ ./omp_team_parallel_gpu.exe</tt></font> は $T$ チームを作成し, それぞれが $H$ スレッドを作成する"
       ]
     },
     {
@@ -1240,14 +1240,14 @@
         "\n",
         "* マルチコアCPUでもスレッドを作成するために `parallel` を使用したことを思い出そう\n",
         "* ただし`teams` は不要だった\n",
-        "* これはマルチコアCPU環境では、全体が一つのチームだったと考えれば辻褄が合う\n",
+        "* これはマルチコアCPU環境では, 全体が一つのチームだったと考えれば辻褄が合う\n",
         "* 実はCPUであっても, `#pragma target teams` をつけても害はない\n",
         "* 1つチームが作られ, その後`#pragma omp parallel`でその一つのチーム内にスレッドが作られるという動作になる\n",
         "\n",
         "* <font color=\"red\">重要な注意1: GPUではOMP_NUM_THREADS は効き目がない</font>模様\n",
-        "  * CPUでは、`parallel` によって作成されるスレッド数は `OMP_NUM_THREADS=x` 環境変数や `parallel` 指令の `num_threads(x)` で指定できた\n",
-        "  * しかし、GPUで実行する場合はこれができない模様 (実装の問題か仕様の問題かは不明)\n",
-        "  * 設定する必要がある場合は、`num_threads(x)` を使用する必要がある\n",
+        "  * CPUでは, `parallel` によって作成されるスレッド数は `OMP_NUM_THREADS=x` 環境変数や `parallel` 指令の `num_threads(x)` で指定できた\n",
+        "  * しかし, GPUで実行する場合はこれができない模様 (実装の問題か仕様の問題かは不明)\n",
+        "  * 設定する必要がある場合は, `num_threads(x)` を使用する必要がある\n",
         "    * 上記のプログラムでは環境変数を(`getenv`で)読んで`num_threads(x)` に渡している\n",
         "  * または省略してシステムに任せる\n",
         "* <font color=\"red\">重要な注意2: スレッド数は32の倍数でなければならない</font>模様\n",
@@ -1275,7 +1275,7 @@
         "# <font color=\"green\"> Problem 2 :  teamsとparallelを理解する</font>",
         "\n",
         "* `teams`と`parallel`の組み合わせに関するクイズ\n",
-        "* 上記のプログラムを <font color=\"blue\"><tt>OMP_NUM_TEAMS=$T$ OMP_NUM_THREADS=$H$ ./omp_parallel_gpu.exe</tt></font> で実行したときに、どの行が何スレッドによって実行されるかを推測し、その結果、何行が出力されるかを表現します\n",
+        "* 上記のプログラムを <font color=\"blue\"><tt>OMP_NUM_TEAMS=$T$ OMP_NUM_THREADS=$H$ ./omp_parallel_gpu.exe</tt></font> で実行したときに, どの行が何スレッドによって実行されるかを推測し, その結果, 何行が出力されるかを表現します\n",
         "* 答えを $T$ と $H$ の式で答えよ"
       ]
     },
@@ -1312,7 +1312,7 @@
         }
       },
       "source": [
-        "* 答えを簡単に確認するために、`wc` コマンドを使用して行数を数えよ"
+        "* 答えを簡単に確認するために, `wc` コマンドを使用して行数を数えよ"
       ]
     },
     {
@@ -1351,7 +1351,7 @@
         "\n",
         "## 7-2. `teams` 内の `distribute` 内の `parallel`",
         "\n",
-        "* 典型的には、`parallel` は `distribute` 内 (必然的に `teams` 内) で呼び出す\n",
+        "* 典型的には, `parallel` は `distribute` 内 (必然的に `teams` 内) で呼び出す\n",
         "* 以下は構文的には新しいことは何もない\n",
         ""
       ]
@@ -1459,7 +1459,7 @@
         "# <font color=\"green\"> Problem 3 :  teams, distribute, parallelを理解する</font>",
         "\n",
         "* team, distribute, parallelの組み合わせに関するクイズ\n",
-        "* 上記のプログラムを <font color=\"blue\"><tt>OMP_NUM_TEAMS=$T$ OMP_NUM_THREADS=$H$ ./omp_distribute_parallel_gpu.exe $m$</tt></font> で実行したときに、どの行が何スレッドによって実行されるかを推測し、その結果、何行が出力されるかを式で表せ\n",
+        "* 上記のプログラムを <font color=\"blue\"><tt>OMP_NUM_TEAMS=$T$ OMP_NUM_THREADS=$H$ ./omp_distribute_parallel_gpu.exe $m$</tt></font> で実行したときに, どの行が何スレッドによって実行されるかを推測し, その結果, 何行が出力されるかを式で表せ\n",
         "* $T$, $H$, $m$ の式で答えよ"
       ]
     },
@@ -1496,7 +1496,7 @@
         }
       },
       "source": [
-        "* 答えを簡単に確認するために、`wc` コマンドを使用して行数を数えよ"
+        "* 答えを簡単に確認するために, `wc` コマンドを使用して行数を数えよ"
       ]
     },
     {
@@ -1549,7 +1549,7 @@
         "}  \n",
         "```\n",
         "\n",
-        "* `parallel` 内で使用されると、ループの繰り返しをスレッドに分配する\n",
+        "* `parallel` 内で使用されると, ループの繰り返しをスレッドに分配する\n",
         ""
       ]
     },
@@ -1663,9 +1663,9 @@
         "# <font color=\"green\"> Problem 4 :  teams, distributed, paralle, for を理解する</font>",
         "\n",
         "* teams, distributed, paralle, for の組み合わせに関するクイズ\n",
-        "* 上記のプログラムを <font color=\"blue\"><tt>OMP_NUM_TEAMS=$T$ OMP_NUM_THREADS=$H$ ./omp_for_gpu.exe $m$ $n$</tt></font> で実行したときに、どの行が何スレッドによって実行されるかを推測し、その結果、何行が出力されるかを式で洗わせ\n",
+        "* 上記のプログラムを <font color=\"blue\"><tt>OMP_NUM_TEAMS=$T$ OMP_NUM_THREADS=$H$ ./omp_for_gpu.exe $m$ $n$</tt></font> で実行したときに, どの行が何スレッドによって実行されるかを推測し, その結果, 何行が出力されるかを式で洗わせ\n",
         "* $T$, $H$, $m$, $n$ の式で表せ\n",
-        "* 答えを簡単に確認するために、`wc` コマンドを使用して行数を数えよ"
+        "* 答えを簡単に確認するために, `wc` コマンドを使用して行数を数えよ"
       ]
     },
     {
@@ -1705,8 +1705,8 @@
         "# 9. よく出てくるディレクティブの結合",
         "\n",
         "* 論理的な一貫性のない多くの異なる指示の名前にうんざりすることだろう\n",
-        "* それぞれは名目上は独立した指示ですが、実際にはほとんど常に一緒に使用される\n",
-        "* 多くの場合, 目的はループを並列に実行することなので、以下の形式のいずれかで使用されることが多い\n",
+        "* それぞれは名目上は独立した指示ですが, 実際にはほとんど常に一緒に使用される\n",
+        "* 多くの場合, 目的はループを並列に実行することなので, 以下の形式のいずれかで使用されることが多い\n",
         "\n",
         "1\\. すべてを結合\n",
         "```\n",
@@ -1715,7 +1715,7 @@
         "      ...\n",
         "    }\n",
         "```\n",
-        "2\\. 外側のループを `teams` と `distribute` で並列化し、内側のループを `parallel` と `for` で並列化する\n",
+        "2\\. 外側のループを `teams` と `distribute` で並列化し, 内側のループを `parallel` と `for` で並列化する\n",
         "\n",
         "```\n",
         "#pragma omp target teams distribute\n",
@@ -1749,29 +1749,29 @@
         "* GPUはCPUと異なるメモリを持っていて, (CPU内のコアと異なり)メモリをハードウェア的に共有しているわけではない(実は最近この事情は変わりつつあるが, 少なくともこの環境やWisteriaはそうではない)\n",
         "* したがってある計算をGPU上で行おうと思ったら一般にはその計算が必要とするデータをGPUに送ってから実行する必要がある\n",
         "* 逆にGPU上で得た結果をCPUで使いたければ, GPUが計算した結果をCPUに送る必要がある\n",
-        "* `target data` とその `map` 節は、それらのデータ転送を手軽に行う指示である\n",
+        "* `target data` とその `map` 節は, それらのデータ転送を手軽に行う指示である\n",
         "\n",
         "* <font color=\"red\">警告：</font> [仕様書](https://www.openmp.org/spec-html/5.0/openmpsu109.html#x142-6180002.19.7)は法律のようなわかりにくさ\n",
-        "* 以下はより直截で, 普通の日本語で説明を試みているが、一部は仕様書で裏を取らず, 実際の実験や実装が行っているであろうことの想像に基づいて書かれている\n",
+        "* 以下はより直截で, 普通の日本語で説明を試みているが, 一部は仕様書で裏を取らず, 実際の実験や実装が行っているであろうことの想像に基づいて書かれている\n",
         "\n",
         "* <font color=\"blue\">構文：</font>\n",
         "```\n",
         "#pragma omp target data map(to: ...) map(from: ...) map(tofrom: ...) ...\n",
         "    S\n",
         "```\n",
-        "ここで、... は変数、配列名、または基底アドレス + 範囲 (例: a[0:n])など\n",
+        "ここで, ... は変数, 配列名, または基底アドレス + 範囲 (例: a[0:n])など\n",
         "\n",
-        "* これらの節は指定された変数、配列、またはアドレス範囲が $S$ の間または後に「期待される」値を持つという効果をもたらす\n",
-        "* より具体的には、\n",
+        "* これらの節は指定された変数, 配列, またはアドレス範囲が $S$ の間または後に「期待される」値を持つという効果をもたらす\n",
+        "* より具体的には, \n",
         "  * `map(to: ...)` に指定されたものは $S$ の間GPU上で有効になります\n",
         "  * `map(from: ...)` に指定されたものは $S$ の後CPU上で有効になります\n",
-        "* これを達成するために、実行時システムによってCPUアドレスとGPUアドレス間の <font color=\"blue\">_マッピング_</font> が維持され、必要に応じて内容がCPU-GPU間で移動する(コピーされる)\n",
+        "* これを達成するために, 実行時システムによってCPUアドレスとGPUアドレス間の <font color=\"blue\">_マッピング_</font> が維持され, 必要に応じて内容がCPU-GPU間で移動する(コピーされる)\n",
         "  * `map(to: ...)` に指定されたデータは $S$ の前に必要ならばGPUにコピーされる (CPU -> GPU)\n",
         "  * `map(from: ...)` に指定されたデータは $S$ の後に必要ならばGPUからコピーされる (GPU -> CPU)\n",
         "  * `map(tofrom: ...)` は両方の効果を持つ\n",
         "* `map` 節を指定しなくても同じ効果を持つこともある(が, どういうときにそうなるかを仕様書から理解しようとするよりも, 指定するほうが早い)\n",
         "\n",
-        "* 通常、このディレクティブは `#pragma omp target` と一緒に使用され、実際にこれらの節を `#pragma omp target` に指定することもできる\n",
+        "* 通常, このディレクティブは `#pragma omp target` と一緒に使用され, 実際にこれらの節を `#pragma omp target` に指定することもできる\n",
         ""
       ]
     },
