--- a/01jupyter/notebooks/source/cs00/cs00_intro.py.ipynb
+++ b/01jupyter/notebooks/source/cs00/cs00_intro.py.ipynb
@@ -439,7 +439,7 @@
       },
       "source": [
         "%%bash\n",
-        "ln -sf /work/gt47/$USER ~/.notebook/lustre"
+        "[ ! -e ~/.notebook/lustre ] && ln -s /work/gt47/$USER ~/.notebook/lustre"
       ],
       "execution_count": null,
       "outputs": []
@@ -625,7 +625,7 @@
         "\n",
         "hostname\n",
         "pwd\n",
-        "who\n",
+        "whoami\n",
         "uptime"
       ],
       "execution_count": null,
