--- a/01jupyter/notebooks/source/cs00/cs00_intro.py.ipynb
+++ b/01jupyter/notebooks/source/cs00/cs00_intro.py.ipynb
@@ -439,7 +439,9 @@
       },
       "source": [
         "%%bash\n",
-        "[ ! -e ~/.notebook/lustre  ] && ln -s /work/gt47/$USER ~/.notebook/lustre"
+        "if ! [ -e ~/.notebook/lustre ]; then\n",
+        "  ln -s /work/gt47/$USER ~/.notebook/lustre\n",
+        "fi"
       ],
       "execution_count": null,
       "outputs": []
