--- a/01jupyter/notebooks/source/cs01/cs01_omp_multicore.py.ipynb
+++ b/01jupyter/notebooks/source/cs01/cs01_omp_multicore.py.ipynb
@@ -159,7 +159,7 @@
       },
       "source": [
         "%%writefile omp_parallel.c\n",
-        "<!--- include nb/source/cs01/include/omp_parallel.c --->"
+        "include nb/source/cs01/include/omp_parallel.c"
       ],
       "execution_count": null,
       "outputs": []
