--- a/01jupyter/notebooks/source/cs01/cs01_omp_multicore.py.ipynb
+++ b/01jupyter/notebooks/source/cs01/cs01_omp_multicore.py.ipynb
@@ -159,7 +159,16 @@
       },
       "source": [
         "%%writefile omp_parallel.c\n",
-        "include nb/source/cs01/include/omp_parallel.c"
+        "#include <stdio.h>\n",
+        "\n",
+        "int main() {\n",
+        "  printf(\"before parallel\\n\");\n",
+        "#pragma omp parallel\n",
+        "  printf(\"in parallel\\n\");\n",
+        "  printf(\"after parallel\\n\");\n",
+        "  return 0;\n",
+        "}\n",
+        ""
       ],
       "execution_count": null,
       "outputs": []
